--- a/subscription/templates/abonnement_active.html
+++ b/subscription/templates/abonnement_active.html
@@ -219,7 +219,7 @@
                                                                   <!-- Altroo :  Action -->
                                                                   <span class="es-button-border"
                                                                         style="display:inline-block;width:auto;">
-                                                                      <a href="/" class="es-button" target="_blank"
+                                                                      <a href="{{ href }}" class="es-button" target="_blank"
                                                                             style="border-color: #d9d9d9;padding: 14px 32px;
                                                                             mso-style-priority:100 !important;
                                                                             font-weight: 700;
